--- a/index.html
+++ b/index.html
@@ -4,38 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Menu</title>
 </head>
 
 <body>
-    <div>
+    <div class="buttons">
         <button>Show All</button>
         <button>Map</button>
         <button>Sum All</button>
         <button>Filter</button>
     </div>
 
-    <ul>
+    <ul class="menu">
         <li>X-Salad
             <img src="./Assets/xsalada.jpeg" alt="x-salad-image">
-            <p>Price: U$10,00</p>
+            <p>Price: U$10,00</p> 
         </li>
         <li>X-Bacon
             <img src="./Assets/xbacon.png" alt="xbacon-image">
+            <p>Price: U$12,00</p>
         </li>
         <li> X-Bacon Egg
             <img src="./Assets/bacon-egg.png" alt="xbacon-egg-image">
+            <p>Price: U$15,00</p>
         </li>
         <li>Monster
             <img src="./Assets/monstruoso.png" alt="monster-image">
+            <p>Price: U$20,00</p>
         </li>
         <li>Big Vegan
             <img src="./Assets/monstruoso-vegan.png" alt="big-vegan-image">
+            <p>Price: U$25,00</p>
         </li>
         <li>X-Vegan
             <img src="./Assets/xvegan.png" alt="xvegan-image">
+            <p>Price: U$30,00</p>
         </li>
     </ul>
 </body>
+
+<script src="./products.js"></script>
+<script src="./script.js"></script>
 
 </html>
