--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     </div>
 
     <ul class="menu">
-        <li>X-Salad
+        <!-- <li>
+            <p>X-Salad</p>
             <img src="./Assets/xsalada.jpeg" alt="x-salad-image">
-            <p>Price: U$10,00</p> 
-        </li>
-        <li>X-Bacon
+            <p class="price">Price: U$10,00</p>
+        </li> -->
+        <!-- <li>X-Bacon
             <img src="./Assets/xbacon.png" alt="xbacon-image">
             <p>Price: U$12,00</p>
         </li>
@@ -39,12 +40,13 @@
         </li>
         <li>X-Vegan
             <img src="./Assets/xvegan.png" alt="xvegan-image">
-            <p>Price: U$30,00</p>
+            <p>Price: U$30,00</p> -->
         </li>
     </ul>
+
 </body>
 
 <script src="./products.js"></script>
-<script src="./script.js"></script>
+<script src="./scripts.js"></script>
 
 </html>
