--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="buttons">
-        <button>Show All</button>
-        <button>Map</button>
+        <button onclick="showAll()">Show All</button>
+        <button onClick="apllyDiscount()">Map</button>
         <button>Sum All</button>
         <button>Filter</button>
     </div>
