reduce+filter changes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="buttons">
-        <button onclick="showAll()">Show All</button>
-        <button onClick="apllyDiscount()">Map</button>
-        <button>Sum All</button>
-        <button>Filter</button>
+        <button onclick="showAll(menuOptions)">Show All</button>
+        <button onclick="apllyDiscount()">Map</button>
+        <button onclick="sumPrices()">Sum All</button>
+        <button onclick="veganFilter()">Filter</button>
     </div>
 
     <ul class="menu">
